WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306310
Check for exception correctly in operationStringProtoFuncReplaceRegExpEmptyStr
https://bugs.webkit.org/show_bug.cgi?id=306310
Summary
Check for exception correctly in operationStringProtoFuncReplaceRegExpEmptyStr
Shu-yu Guo
Reported
2026-01-26 17:38:04 PST
rdar://168910627
Attachments
Add attachment
proposed patch, testcase, etc.
Shu-yu Guo
Comment 1
2026-01-26 17:41:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57303
Shu-yu Guo
Comment 2
2026-01-26 17:47:50 PST
Oops, got the radar wrong, it's
rdar://168910210
Shu-yu Guo
Comment 3
2026-01-26 17:47:58 PST
<
rdar://problem/168910210
>
EWS
Comment 4
2026-01-27 11:04:33 PST
Committed
306294@main
(ffbeef167f9a): <
https://commits.webkit.org/306294@main
> Reviewed commits have been landed. Closing PR #57303 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug