[JSC] Check for exception correctly in operationStringProtoFuncReplaceRegExpEmptyStr https://bugs.webkit.org/show_bug.cgi?id=306310 rdar://168910210

Reviewed by Yusuke Suzuki.

Test: JSTests/stress/string-replace-regexp-exception-check.js
Canonical link: https://commits.webkit.org/306294@main